--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "http-proxy-middleware": "^0.20.0",
     "lodash": "^4.17.15",
+    "mysql2": "^1.7.0",
     "nodemon": "^1.19.2",
     "passport": "^0.4.0",
     "passport-amazon": "^1.0.0",
@@ -24,7 +25,8 @@
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "sequelize": "^5.21.1"
   },
   "scripts": {
     "start": "react-scripts start",
