--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/pickers": "^3.2.8",
     "chalk": "^2.4.2",
     "concurrently": "^4.1.2",
     "cors": "^2.8.5",
+    "date-fns": "^2.0.0-beta.5",
     "express": "^4.17.1",
     "http-proxy-middleware": "^0.20.0",
     "lodash": "^4.17.15",
