--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.2.1",
     "@material-ui/pickers": "^3.2.8",
     "chalk": "^2.4.2",
+    "chart.js": "^2.9.3",
     "concurrently": "^4.1.2",
     "cors": "^2.8.5",
     "date-fns": "^2.0.0-beta.5",
@@ -25,6 +26,7 @@
     "passport-spotify": "^1.1.0",
     "passport-twitch.js": "0.0.7",
     "react": "^16.8.6",
+    "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
