--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-swipeable-views": "^0.13.3",
     "sequelize": "^5.21.1"
   },
   "scripts": {
